--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
+# Ignore the extract C-Source code for mpdecimal
+/c_src/mpdecimal-2.5.1
+
 # Ignore package tarball (built via "mix hex.build").
 mpdecimal-*.tar
 
