--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,13 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
-# Ignore the extract C-Source code for mpdecimal
-/c_src/mpdecimal-2.5.1
+# Ignore the extracted mpdecimal source code.
+# TODO: Ignore *any* version of the extracted library without ignoring the tar file itself.
+/c_lib/mpdecimal-2.5.1
+/c_lib/.extract*
 
 # Ignore package tarball (built via "mix hex.build").
 mpdecimal-*.tar
-
 
 # Temporary files for e.g. tests
 /tmp
